--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 
 /*--------------- basic styling --------------- */
 html, body {
@@ -5,7 +6,7 @@ html, body {
       padding: 0;
       width: 100%;
       height: 100%;
-      font-family: "Roboto Mono" !important;
+      font-family: 'Roboto Mono', monospace !important;
       background: #0f0f0f !important;
       color: #fff !important;
 }
