--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,6 +40,8 @@
                         {{end}}
                   {{end}}
                   
+                  <h6 class="project-list-item-description wow fadeInUp" style="color: white; font-weight: bold;">Visit my <a href="" class="no-dec">GitHub</a> for a complete list</h6>
+                  <br><br>
 
                   <div class="whitespace"></div>
             </div>
