Setup admin panel

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,6 +18,8 @@
       <!-- stylesheet -->
       <link rel="stylesheet" href="/css/style.css">
 
+      <!-- netlify idendity widget-->
+
       <!-- bootstrap cdns -->
       <link rel="stylesheet" href="/css/bootstrap.min.css">
       <script src="/js/bootstrap.min.js"></script>
